--- a/setup.cfg
+++ b/setup.cfg
@@ -49,9 +49,8 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    summarizedexperiment==0.1.3
-    anndata==0.7.8
-
+    summarizedexperiment>=0.1.4
+    anndata>=0.7.8
 
 [options.packages.find]
 where = src
