chore: setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = SingleCellExperiment
-description = Container class for representing data from single-cell experiments
+description = Container class for single-cell experiments
 author = jkanche
 author_email = jayaram.kancherla@gmail.com
 license = MIT
