--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [metadata]
 name = SingleCellExperiment
-description = Container class for representing data from single-cell experiments
+description = Container class for single-cell experiments
 author = jkanche
 author_email = jayaram.kancherla@gmail.com
 license = MIT
@@ -49,9 +49,9 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    summarizedexperiment==0.1.3
-    anndata==0.7.8
-
+    summarizedexperiment>=0.1.5
+    anndata>=0.7.8
+    h5py
 
 [options.packages.find]
 where = src
