feat: export SCE as MuData

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,8 +50,9 @@ package_dir =
 install_requires =
     importlib-metadata; python_version<"3.8"
     summarizedexperiment>=0.2.0
-    anndata>=0.7.8
+    anndata
     h5py
+    mudata
 
 [options.packages.find]
 where = src
