--- a/setup.cfg
+++ b/setup.cfg
@@ -108,7 +108,7 @@ formats = bdist_wheel
 
 [flake8]
 # Some sane defaults for the code style checker flake8
-max_line_length = 88
+max_line_length = 100
 extend_ignore = E203, W503
 # ^  Black-compatible
 #    E203 and W503 have edge cases handled by black
@@ -118,11 +118,13 @@ exclude =
     dist
     .eggs
     docs/conf.py
+per-file-ignores = __init__.py:F401
 
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 4.1.1
+version = 4.5
 package = singlecellexperiment
 extensions =
     markdown
+    pre_commit
