--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,7 +2,6 @@
 # To build the module reference correctly, make sure every external package
 # under `install_requires` in `setup.cfg` is also listed here!
 # sphinx_rtd_theme
-recommonmark
+myst-parser[linkify]
 sphinx>=3.2.1
-sphinx-rtd-theme
 furo
