make anndata and mudata optional as well

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,10 +49,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    summarizedexperiment>=0.3.0
-    anndata
-    h5py
-    mudata
+    summarizedexperiment>=0.3.1
 
 [options.packages.find]
 where = src
@@ -62,13 +59,19 @@ exclude =
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
 # `pip install SingleCellExperiment[PDF]` like:
-# PDF = ReportLab; RXP
+optional = 
+    anndata
+    h5py
+    mudata
 
 # Add here test requirements (semicolon/line-separated)
 testing =
     setuptools
     pytest
     pytest-cov
+    anndata
+    h5py
+    mudata
 
 [options.entry_points]
 # Add here console scripts like:
