better support to anndata

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,7 @@ optional =
     anndata
     h5py
     mudata
+    delayedarray
 
 # Add here test requirements (semicolon/line-separated)
 testing =
@@ -72,6 +73,7 @@ testing =
     anndata
     h5py
     mudata
+    delayedarray
 
 [options.entry_points]
 # Add here console scripts like:
