use delayed arrays when loading 10x h5 files

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,7 @@ optional =
     h5py
     mudata
     delayedarray
+    hdf5array
 
 # Add here test requirements (semicolon/line-separated)
 testing =
@@ -74,6 +75,7 @@ testing =
     h5py
     mudata
     delayedarray
+    hdf5array
 
 [options.entry_points]
 # Add here console scripts like:
