--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,8 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install SingleCellExperiment[PDF]` like:
 optional =
-    anndata
+    anndata==0.9.2; python_version<="3.9"
+    anndata>0.9.2; python_version>"3.9"
     h5py
     mudata
     delayedarray
@@ -71,7 +72,8 @@ testing =
     setuptools
     pytest
     pytest-cov
-    anndata
+    anndata==0.9.2; python_version<="3.9"
+    anndata>0.9.2; python_version>"3.9"
     h5py
     mudata
     delayedarray
