--- a/setup.cfg
+++ b/setup.cfg
@@ -63,7 +63,8 @@ optional =
     anndata==0.9.2; python_version<="3.9"
     anndata>0.9.2; python_version>"3.9"
     h5py
-    mudata
+    mudata==0.2.3; python_version<="3.9"
+    mudata>0.2.3; python_version>"3.9"
     delayedarray
     hdf5array
 
@@ -75,7 +76,8 @@ testing =
     anndata==0.9.2; python_version<="3.9"
     anndata>0.9.2; python_version>"3.9"
     h5py
-    mudata
+    mudata==0.2.3; python_version<="3.9"
+    mudata>0.2.3; python_version>"3.9"
     delayedarray
     hdf5array
 
