--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,8 @@ optional =
     mudata>0.2.3; python_version>"3.9"
     delayedarray
     hdf5array
+    numpy==1.24.4; python_version<="3.9"
+    numpy>1.24.4; python_version>"3.9"
 
 # Add here test requirements (semicolon/line-separated)
 testing =
@@ -80,6 +82,8 @@ testing =
     mudata>0.2.3; python_version>"3.9"
     delayedarray
     hdf5array
+    numpy==1.24.4; python_version<="3.9"
+    numpy>1.24.4; python_version>"3.9"
 
 [options.entry_points]
 # Add here console scripts like:
