--- a/setup.cfg
+++ b/setup.cfg
@@ -60,22 +60,30 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install SingleCellExperiment[PDF]` like:
 optional =
-    anndata
+    anndata==0.9.2; python_version<="3.9"
+    anndata>0.9.2; python_version>"3.9"
     h5py
-    mudata
+    mudata==0.2.3; python_version<="3.9"
+    mudata>0.2.3; python_version>"3.9"
     delayedarray
     hdf5array
+    numpy==1.24.4; python_version<="3.9"
+    numpy>1.24.4; python_version>"3.9"
 
 # Add here test requirements (semicolon/line-separated)
 testing =
     setuptools
     pytest
     pytest-cov
-    anndata
+    anndata==0.9.2; python_version<="3.9"
+    anndata>0.9.2; python_version>"3.9"
     h5py
-    mudata
+    mudata==0.2.3; python_version<="3.9"
+    mudata>0.2.3; python_version>"3.9"
     delayedarray
     hdf5array
+    numpy==1.24.4; python_version<="3.9"
+    numpy>1.24.4; python_version>"3.9"
 
 [options.entry_points]
 # Add here console scripts like:
